# vanity-miner

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  deploy.yml  release.yml
src/: lib.rs  wasm_serde.rs
src/createx/: compute.rs  config.rs  miner.rs  mod.rs
src/eulerswap/: compute.rs  config.rs  miner.rs  mod.rs
src/univ4_hook/: config.rs  miner.rs  mod.rs
web/: app.js  index.html  styles.css
