[package]
name = "vanity-miner"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = { version = "1.2.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.140"
thiserror = "2.0.12"
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
